--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ body {
   src: url(MBF-Space.woff);
 }
 #header {
-  width: 84%;
+  width: 83.14vw;
   height: 97.5vh;
   background-image: url(newbg.png);
   background-size: cover;
   background-position: center;
-  padding: 10px 8%;
+  padding:0.6544502617801vw 8%;
   position: relative;
 }
 nav {
@@ -32,31 +32,32 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-right: -110px;
+  /* margin-right: -110px; */
+  margin-right: -7.1989528795812vw;
 }
 .nav-items {
-  padding-right: 20px;
+  padding-right:1.3089005235602vw;
   font-family: "Roboto";
   font-weight: 600;
-  font-size: 16px;
+  font-size: 1.0471204188482vw;
   color: white;
   text-decoration: none;
-  margin-top: 10px;
+  margin-top: 1.348vh;
 }
 .name {
   font-family: "Roboto";
-  font-size: 16px;
-  margin-left: -70px;
-  padding-left: 7px;
+  font-size: 1.0471204188482vw;
+  margin-left: -4.5811518324607vw;
+  padding-left:0.45811518324607vw;
   font-weight: 600;
-  margin-top: 10px;
+  margin-top: 1.348vh;
 }
 .nav-items:hover {
-  padding-right: 20px;
+  padding-right:1.3089005235602vw;
   font-family: "Roboto";
   font-weight: 600;
   text-decoration: none;
-  font-size: 16px;
+  font-size:  1.0471204188482vw;
   color: white;
   text-align: center;
   -webkit-animation: glow 1s ease infinite alternate;
@@ -78,11 +79,11 @@ nav {
 .container .text {
   position: relative;
   color: #4070f4;
-  font-size: 40px;
+  font-size:2.6178010471204vw;
   font-weight: 600;
   font-family:'monospace';
-  top: 80px;
-  left: 370px;
+  top:10.782vh;
+  left:24.214659685864vw;
 }
 .container .text.first-text {
   color: black;
@@ -109,27 +110,27 @@ nav {
 }
 .white-board-name {
   position: relative;
-  top: 150px;
-  left: 310px;
+  top:20.216vh;
+  left:20.287958115183vw;
   color: white;
   font-family: 'Merienda';
-  font-size: 40px;
-  letter-spacing: 2px;
+  font-size: 2.6178010471204vw;
+  letter-spacing: 0.13089005235602vw;
 }
 .typewrite {
   text-decoration: none;
   position: relative;
-  top: 95px;
-  left: 532px;
-  font-size: 40px;
+  top:12.803vh;
+  left: 34.816753926702vw;
+  font-size: 2.618vw;
   font-family: 'Merienda';
   color: #8e40f4;
-  letter-spacing: 2px;
+  letter-spacing: 0.13089005235602vw;
 }
 .section1 {
   display: flex;
   flex-direction: column;
-  height: 870px;
+  height: 117.251vh;
   width: 100%;
   background: linear-gradient(
     -45deg,
@@ -161,57 +162,57 @@ nav {
 .headingtech {
   display: flex;
   flex-direction: row;
-  margin-top: 30px;
+  margin-top: 4.043vh;
   margin-left: 40%;
 }
 .tech_heading {
-  font-size: 48px;
+  font-size: 3.141vw;
   font-family: "Roboto";
   color: #c8c1e8;
   font-weight: lighter;
 }
 .proficiency {
-  font-size: 52px;
+  font-size: 3.403vw;
   font-family: "roboto";
   font-weight: 50;
-  margin-left: 16px;
+  margin-left: 1.3089005235602vw;
   color: #c8c1e8;
   font-weight: lighter;
 }
 .html_logo {
-  width: 100px;
-  height: 100px;
-  margin-left: 30px;
-  margin-top: 10px;
+  width: 6.545vw;
+  height: 13.477vh;
+  margin-left: 1.963vw;
+  margin-top: 1.348vh;
 }
 .html_text {
   font-family: "roboto";
-  font-size: 18px;
+  font-size: 1.178vw;
   font-weight: lighter;
   position: relative;
   display: inline-block;
-  left: -80px;
-  top: 30px;
+  left: -5.236vw;
+  top: 4.043vh;
 }
 .html_text:hover .tooltip-text {
   visibility: visible;
 }
 #html_right {
-  top: -99px;
+  top: -13.342vh;
   left: 240%;
 }
 .css_logo {
-  width: 100px;
-  height: 100px;
-  margin-left: 30px;
-  margin-top: 35px;
+  width: 6.545vw;
+  height: 13.477vh;
+  margin-left: 1.963vw;
+  margin-top: 4.717vh;
 }
 .css_text {
   font-family: "roboto";
-  font-size: 18px;
+  font-size:  1.178vw;
   font-weight: lighter;
-  left: -76px;
-  top: 30px;
+  left: -4.974vw;
+  top: 4.043vh;
   position: relative;
   display: inline-block;
 }
@@ -219,21 +220,21 @@ nav {
   visibility: visible;
 }
 #css_right {
-  top: -99px;
+  top:  -13.342vh;
   left: 340%;
 }
 .js_logo {
-  width: 100px;
-  height: 100px;
-  margin-left: 30px;
-  margin-top: 35px;
+  width: 6.545vw;
+  height: 13.477vh;
+  margin-left: 1.963vw;
+  margin-top: 4.717vh;
 }
 .js_text {
   font-family: "roboto";
-  font-size: 18px;
+  font-size: 1.178vw;
   font-weight: lighter;
-  left: -100px;
-  top: 25px;
+  left: -6.545vw;
+  top: 3.369vh;
   position: relative;
   display: inline-block;
 }
@@ -241,21 +242,21 @@ nav {
   visibility: visible;
 }
 #js_right {
-  top: -99px;
+  top:  -13.342vh;
   left: 160%;
 }
 .react_logo {
-  width: 100px;
-  height: 100px;
-  margin-left: 30px;
-  margin-top: 35px;
+  width: 6.545vw;
+  height: 13.477vh;
+  margin-left: 1.963vw;
+  margin-top: 4.717vh;
 }
 .react_text {
   font-family: "roboto";
-  font-size: 18px;
+  font-size: 1.178vw;
   font-weight: lighter;
-  left: -80px;
-  top: 20px;
+  left: -5.236vw;
+  top: 2.695vh;
   position: relative;
   display: inline-block;
 }
@@ -263,21 +264,21 @@ nav {
   visibility: visible;
 }
 #react_right {
-  top: -81px;
+  top: -10.916vh;
   left: 245%;
 }
 .node_logo {
-  width: 100px;
-  height: 100px;
-  margin-left: 30px;
-  margin-top: 28px;
+  width: 6.545vw;
+  height: 13.477vh;
+  margin-left: 1.963vw;
+  margin-top: 3.774vh;
 }
 .node_text {
   font-family: "roboto";
-  font-size: 18px;
+  font-size: 1.178vw;
   font-weight: lighter;
-  left: -87px;
-  top: 30px;
+  left: -5.694vw;
+  top: 1.694vw;
   position: relative;
   display: inline-block;
 }
@@ -285,21 +286,21 @@ nav {
   visibility: visible;
 }
 #node_right {
-  top: -99px;
+  top:  -13.342vh;
   left: 230%;
 }
 .tailwind_logo {
-  width: 100px;
-  height: 100px;
-  margin-left: 30px;
-  margin-top: 28px;
+  width: 6.545vw;
+  height: 13.477vh;
+  margin-left: -32.963vw;
+  margin-top: 3.774vh;
 }
 .tailwind_text {
   font-family: "roboto";
-  font-size: 18px;
+  font-size: 1.178vw;
   font-weight: lighter;
-  left: -90px;
-  top: 30px;
+  left: -5.89vw;
+  top: 4.043vh;
   position: relative;
   display: inline-block;
 }
@@ -307,21 +308,21 @@ nav {
   visibility: visible;
 }
 #tail_right {
-  top: -99px;
+  top:  -13.342vh;
   left: 210%;
 }
 .python_logo {
-  width: 100px;
-  height: 100px;
-  margin-left: 30px;
-  margin-top: 28px;
+  width: 6.545vw;
+  height: 13.477vh;
+  margin-left: -32.963vw;
+  margin-top: 3.774vh;
 }
 .python_text {
   font-family: "roboto";
-  font-size: 18px;
+  font-size: 1.178vw;
   font-weight: lighter;
-  left: -85px;
-  top: 30px;
+  left: -5.563vw;
+  top: 4.043vh;
   position: relative;
   display: inline-block;
 }
@@ -329,21 +330,21 @@ nav {
   visibility: visible;
 }
 #py_right {
-  top: -99px;
+  top:  -13.342vh;
   left: 200%;
 }
 .java_logo {
-  width: 100px;
-  height: 100px;
-  margin-left: 30px;
-  margin-top: 28px;
+  width: 6.545vw;
+  height: 13.477vh;
+  margin-left: -32.963vw;
+  margin-top: 3.774vh;
 }
 .java_text {
   font-family: "roboto";
-  font-size: 18px;
+  font-size: 1.178vw;
   font-weight: lighter;
-  left: -76px;
-  top: 30px;
+  left: -5.563vw;
+  top: 4.043vh;
   position: relative;
   display: inline-block;
 }
@@ -351,21 +352,21 @@ nav {
   visibility: visible;
 }
 #java_right {
-  top: -99px;
+  top:  -13.342vh;
   left: 350%;
 }
 .FIGMA_logo {
-  width: 100px;
-  height: 100px;
-  margin-left: 30px;
-  margin-top: 28px;
+  width: 6.545vw;
+  height: 13.477vh;
+  margin-left: -32.963vw;
+  margin-top: 3.774vh;
 }
 .figma_text {
   font-family: "roboto";
-  font-size: 18px;
+  font-size: 1.178vw;
   font-weight: lighter;
-  left: -80px;
-  top: 30px;
+  left: -5.236vw;
+  top: 4.043vh;
   position: relative;
   display: inline-block;
 }
@@ -373,20 +374,20 @@ nav {
   visibility: visible;
 }
 #figma_right {
-  top: -99px;
+  top:  -13.342vh;
   left: 260%;
 }
 .htmlcssjs {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin-left: 95px;
+  margin-left: 6.217vw;
 }
 .pj {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin-right: 550px;
+  margin-right: 6.217vw;
 }
 .tooltip-text {
   display: flex;
@@ -394,54 +395,19 @@ nav {
   visibility: hidden;
   position: absolute;
   z-index: 1;
-  width: 150px;
+  width: 9.817vw;
   background-color: #192733;
   border: 2px solid silver;
-  border-radius: 10px;
-  padding: 10px 15px 10px 15px;
+  border-radius: 1.199vw;
+  padding: 1.348vh 0.982vw 1.348vh 0.982vw;
 }
 .star{
-  width: 25px;
-  height: 25px;
+  width: 1.636vw;
+  height: 3.369vh;
 }
-/* footer{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+@media (max-width:600px) {
+  nav{
     width: 100%;
-    height: 45px; 
-    color: white;
-    font-family: 'roboto';
-    font-weight: bolder;
-    font-size: 20px;
-    margin-top: 90px;
+    height: 8.086vh;
+  }
 }
-.made_text{
-    position: relative;
-    top: -45px;
-    left: -140px;
-    font-family: 'roboto';
-    font-weight: bold;
-    font-size: 16px;
-    color: black;
-}
-.footer_img{
-    margin-top: -65px;
-    width: 50px;
-    height: 50px;
-}
-.back_to_top{
-    position:relative;
-    top: -45px;
-    right: -140px;
-    text-decoration: none;
-    color: black;
-    font-family: 'roboto';
-    font-weight: bold;
-    font-size: 16px;
-}
-hr{
-    width: 1250px;
-    margin-top: 50px;
-    margin-left: 135px;
-} */
