--- a/about.css
+++ b/about.css
@@ -6,7 +6,7 @@
 }
 .about{
     width: 100%;
-    height: 742px;
+    height: 100vh;
     /* background: linear-gradient(to top,#3e4169,rgb(21, 22, 54)); */
     background: linear-gradient(
     -45deg,
@@ -21,17 +21,17 @@
     top: 29%;
     left: 40%;
     opacity: 50%;
-    width: 300px;
-    height: 300px;
+    width: 19.634vw;
+    height: 40.431vh;
 }
 .text_box{
-    font-size: 20px;
+    font-size: 1.309vw;
     font-family: 'Roboto';
     font-weight: 1000;
-    margin-top: -135px;
-    margin-left: -1475px;
-    width: 1100px;
-    height: 300px;
+    margin-top: -18.194vh;
+    margin-left: -96.531vw;
+    width: 71.99vw;
+    height: 40.431vh;
     color:white;
 }
 .text_man{
@@ -39,12 +39,12 @@
     flex-direction: row;
 }
 .man{
-    margin-top: -285px;
-    margin-left: 900px;
-    height: 630px;
+    margin-top: -38.41vh;
+    margin-left: 58.901vw;
+    height: 84.906vh;
 }
 .hi{
-    font-size: 32px;
+    font-size: 2.094vw;
     font-family:monospace;
     color:white;
 }
@@ -59,27 +59,27 @@ nav{
     justify-content: space-between;
 }
 .nav-items{
-    margin-top: 20px;
-    padding-right: 20px;
+    margin-top: 1.309vw;
+    padding-right: 1.309vw;
     font-family: 'Roboto';
     font-weight: 600;
-    font-size: 16px;
+    font-size: 1.3089005235602vw;
     color:#C8C1E8;
     text-decoration: none;
 }
 .name{
     font-family: 'Roboto';
-    font-size: 16px;
-    padding-left: 7px;
+    font-size: 1.3089005235602vw;
+    padding-left: 0.458vw;
     font-weight: 600;
 }
 .nav-items:hover{
-    margin-top: 20px;
-    padding-right: 20px;
+    margin-top: 2.695vh;
+    padding-right: 1.309vw;
     font-family: 'Roboto';
     font-weight: 600;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 1.3089005235602vw;
     text-decoration: underline 2px;
     color:#C8C1E8;
 }
