--- a/style.css
+++ b/style.css
@@ -411,9 +411,121 @@ nav {
   width: 1.636vw;
   height: 3.369vh;
 }
-@media (max-width:600px) {
-  nav{
-    width: 100%;
-    height: 8.086vh;
+@media (max-width:400px) {
+  #header{
+    width: 84vw;
+    height: 50vh;
+  }
+  .name{
+    font-size: 2vw;
+  }
+  .nav-items{
+    font-size: 2vw;
+  }
+  .white-board-name{
+    font-size: 4vw;
+    margin-top: -9vh;
+    margin-left: -10vw;
+  }
+  .typewrite{
+    top:16vh;
+    margin-left: -3vw;
+    font-size: 4vw;
+  }
+  .headingtech{
+    margin-left: 32.5vw;
+  }
+  .tech_heading{
+    font-size:5vw ;
+  }
+  .proficiency{
+    font-size: 5vw;
+  }
+  .section1{
+    height: 62vh;
+  }
+  .html_logo{
+    width: 8vw;
+    height: 7vh;
+  }
+  .html_text{
+    font-size: 1.5vw;
+    left: -6.5vw;
+    top: 5vw;
+  }
+  .css_logo{
+    width: 8vw;
+    height: 7vh;
+  }
+  .css_text{
+    font-size: 1.5vw;
+    left: -6.5vw;
+    top: 4vw;
+  }
+  .js_logo{
+    width: 8vw;
+    height: 7vh;
+  }
+  .js_text{
+    font-size: 1.5vw;
+    left: -8vw;
+    top: 3vh;
+  }
+  .tailwind_logo{
+    width: 8vw;
+    height: 7vh;
+  }
+  .tailwind_text{
+    font-size: 1.5vw;
+    left: -7.9vw;
+    top: 2.5vh;
+  }
+  .react_logo{
+    width: 8vw;
+    height: 7vh;
+  }
+  .react_text{
+    font-size: 1.5vw;
+    left: -6.5vw;
+    top: 2.5vw;
+  }
+  .node_logo{
+    width: 8vw;
+    height: 7vh;
+  }
+  .node_text{
+    font-size: 1.5vw;
+    left: -7vw;
+    top: 3vh;
+  }
+  .python_logo{
+    width: 8vw;
+    height: 7vh;
+  }
+  .python_text{
+    font-size: 1.5vw;
+    left: -7.2vw;
+    top: 2.5vh;
+  }
+  .java_logo{
+    width: 8vw;
+    height: 7vh;
+  }
+  .java_text{
+    font-size: 1.5vw;
+    left: -7vw;
+    top:2vh;
+  }
+  .FIGMA_logo{
+    width: 8vw;
+    height: 7vh;
+  }
+  .figma_text{
+    font-size: 1.5vw;
+    left: -6.8vw;
+    top:3.2vh;
+  }
+  .htmlcssjs{
+    margin-top: 2vh;
   }
 }
