--- a/project.css
+++ b/project.css
@@ -165,6 +165,7 @@ nav{
   height: 13.477vh; 
   border-radius: 1.309vw;
   margin-left: 0.327vw;
+  margin-top:1vh;
   background-color: #C8C1E8;
 }
 .project_item_text2{
