--- a/style.css
+++ b/style.css
@@ -6,7 +6,11 @@
   margin: 0;
   padding: 0%;
 }
-
+html,body{
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+}
 body {
   color: #fff;
 }
