--- a/about.css
+++ b/about.css
@@ -4,6 +4,11 @@
     margin: 0;
     padding: 0;
 }
+html,body{
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+}
 .about{
     width: 100%;
     height: 100vh;
