--- a/project.css
+++ b/project.css
@@ -3,6 +3,11 @@
   margin: 0;
   padding: 0;
 }
+html,body{
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+}
 body{
   /* background: linear-gradient(to top,#3e4169,rgb(21, 22, 54)); */
   background: linear-gradient(
