--- a/Netflix/style.css
+++ b/Netflix/style.css
@@ -2,6 +2,11 @@
     margin:0;
     padding: 0;
 }
+html,body{
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+}
 .section1{
     width: 100vw;
     height: 350vh;
