--- a/project.css
+++ b/project.css
@@ -498,6 +498,18 @@ nav{
   .project_img1{
     width: 60vw;
   }
+  .foodyy{
+    width:60vw;
+  }
+  .cynthia{
+    width:60vw;
+  }
+  .great{
+    width:60vw;
+  }
+  .squarespace{
+    width:60vw;
+  }
   .project_item_text1{
     width: 60vw;
     margin-left: 5vw;
