--- a/about.css
+++ b/about.css
@@ -94,6 +94,9 @@ nav{
     .nav-items{
         font-size: 2vw;
     }
+    .nav-items:hover{
+        font-size: 2vw;
+    }
 .abstract{
         width: 50vw;
         position: relative;
