--- a/style.css
+++ b/style.css
@@ -425,6 +425,7 @@ nav {
   #header{
     width: 84vw;
     height: 50vh;
+    background-size: 100% 100%;
   }
   .name{
     font-size: 2vw;
@@ -436,14 +437,15 @@ nav {
     font-size: 2vw;
   }
   .white-board-name{
-    font-size: 4vw;
-    margin-top: -9vh;
-    margin-left: -10vw;
+    font-size: 2.5vw;
+    position: relative;
+    top: 10vh;
   }
   .typewrite{
-    top:16vh;
-    margin-left: -3vw;
-    font-size: 4vw;
+    position: relative;
+    top: 5.3vh;
+    left: 34.5vw;
+    font-size: 2.5vw;
   }
   .headingtech{
     margin-left: 32.5vw;
